Refactor and add missing translations

--- a/controllers/schemes/config_form.yaml
+++ b/controllers/schemes/config_form.yaml
@@ -1,4 +1,4 @@
-name: Схема
+name: 'uit.lighthouse::lang.models.schema.single'
 modelClass: Uit\Lighthouse\Models\Schema
 form: $/uit/lighthouse/models/schema/fields.yaml
 defaultRedirect: uit/lighthouse/schemes
